<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_admin"
            android:title="@string/sidebar_admin" />
        <item
            android:id="@+id/nav_map"
            android:title="@string/sidebar_map" />
        <item
            android:id="@+id/nav_mypins"
            android:title="@string/sidebar_mypins" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/sidebar_settings" />
        <item
            android:id="@+id/nav_login"
            android:visible="false"
            android:title="@string/sidebar_login" />

        <item
            android:id="@+id/nav_logout"
            android:visible="false"
            android:title="@string/sidebar_login" />

    </group>
</menu>