<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.CoordinatorLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toTopOf="@+id/tabs"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginEnd="@dimen/margin_normal">

                    <TextView
                        android:id="@+id/txt_term_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/terms_title" />

                    <TextView
                        style="@style/TextAppearance.OITOO.H4"
                        android:id="@+id/txt_term_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/terms_subtitle" />

                    <TextView
                        android:id="@+id/txt_term_description"
                        style="@style/TextAppearance.OITOO.H3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/terms_text" />
                </LinearLayout>

            </ScrollView>

            <android.support.design.widget.TabLayout
                android:id="@+id/tabs"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:background="@color/oitoo_yellow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:tabGravity="fill"
                app:tabIndicatorColor="@color/oitoo_yellow"
                app:tabIndicatorHeight="3dp"
                app:tabMode="fixed">

                <android.support.design.widget.TabItem
                    android:id="@+id/tab_accept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/accept_black" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tab_refuse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/reject_black" />

            </android.support.design.widget.TabLayout>

        </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>

</layout>