<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="pt.oitoo.portooculto.viewmodel.EmailVerificationViewModel"/>

    </data>

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/cl_email_verification">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:id="@+id/rlEmailVerification">


            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie_paperplane"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"

                android:layout_gravity="center"
                android:layout_marginStart="82dp"
                android:layout_marginTop="29dp"
                android:layout_marginEnd="79dp"
                android:layout_marginBottom="@dimen/margin_large"
                android:fitsSystemWindows="true"
                android:importantForAccessibility="no"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/paperplane" />

            <TextView
                style="@style/TextAppearance.OITOO.H2"
                android:id="@+id/textView"
                android:layout_below="@+id/lottie_paperplane"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_large"
                android:text="@string/email_verification_description"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="40dp"/>

            <Button
                style="@style/Widget.OITOO.RaisedButton"
                android:id="@+id/btnVerifyEmail"
                android:layout_below="@+id/textView"
                android:layout_marginStart="32dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.verify()}"
                android:text="@string/email_verification_btn_validate" />

            <Button
                style="@style/Widget.OITOO.RaisedButton"
                android:id="@+id/btnResendVerification"
                android:layout_below="@+id/textView"
                android:layout_marginEnd="32dp"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.resend()}"
                android:text="@string/email_verification_btn_resend" />


        </RelativeLayout>

        <TextView
            style="@style/TextAppearance.OITOO.H4"
            android:id="@+id/txtAuthActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SOME TEXT"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="15dp"/>

    </android.support.design.widget.CoordinatorLayout>
</layout>