<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="pt.oitoo.portooculto.viewmodel.RegistrationViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinator_reg_dialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:weightSum="2"
            android:orientation="vertical"
            android:id="@+id/linear_register_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:src="@drawable/oitoo_register_background"
                android:scaleType="centerCrop"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:src="@color/oitoo_orange"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="hideKeyboard"
            android:layout_gravity="bottom">

            <android.support.design.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:id="@+id/reg_container_fields"
                    style="@style/Widget.OITOO.Dialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="168dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:paddingEnd="8dp"
                        android:paddingStart="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_normal"
                        android:layout_marginTop="@dimen/margin_normal"
                        android:text="@string/register"
                        style="@style/TextAppearance.OITOO.DialogTitle" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tl_auth_name"
                        style="@style/TextAppearance.OITOO.TextInputLayout"
                        app:passwordToggleContentDescription="Email">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_auth_name"
                            style="@style/TextAppearance.OITOO.TextInputEditText"
                            android:hint="@string/name"
                            android:inputType="textEmailAddress"
                            android:text="@={viewModel.reg.username}" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tl_auth_user"
                        style="@style/TextAppearance.OITOO.TextInputLayout"
                        app:passwordToggleContentDescription="Email">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_auth_user"
                            style="@style/TextAppearance.OITOO.TextInputEditText"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:text="@={viewModel.reg.email}" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tl_auth_mail"
                        style="@style/TextAppearance.OITOO.TextInputLayout"
                        app:passwordToggleContentDescription="Password"
                        app:passwordToggleEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_auth_mail"
                            style="@style/TextAppearance.OITOO.TextInputEditText"
                            android:hint="@string/password"
                            android:drawableLeft="@drawable/ic_arrow"
                            android:inputType="textPassword"
                            android:text="@={viewModel.reg.password}" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tl_auth_password"
                        style="@style/TextAppearance.OITOO.TextInputLayout"
                        android:layout_marginBottom="@dimen/margin_large"
                        app:passwordToggleContentDescription="Password"
                        app:passwordToggleEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_auth_pwd"
                            style="@style/TextAppearance.OITOO.TextInputEditText"
                            android:hint="@string/confirm_password"
                            android:inputType="textPassword"
                            android:text="@={ viewModel.reg.passwordConfirm }" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    android:translationZ="25dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_register_casa"
                    app:layout_anchor="@+id/reg_container_fields"
                    app:layout_anchorGravity="top|center" />

                <FrameLayout
                    android:id="@+id/frame_signin"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_below="@+id/reg_container_fields"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/gradient_horizontal_background"
                    android:elevation="30dp"
                    android:focusable="true"
                    android:foreground="?selectableItemBackground"
                    android:onClick="@{ () -> viewModel.register() }"
                    app:clickable="@{ viewModel.reg.isValidatingFields }"
                    app:layout_anchor="@+id/reg_container_fields"
                    app:layout_anchorGravity="bottom|center">

                    <TextView
                        android:id="@+id/txt_signin"
                        style="@style/Widget.OITOO.RaisedTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/register_confirm" />

                    <ProgressBar
                        android:id="@+id/progress_bar2"
                        style="@style/Widget.OITOO.ProgressbarWhite"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_gravity="center"
                        android:translationZ="10dp"
                        android:visibility="invisible"
                        app:setValidatingProgressVisibility="@{ viewModel.reg.isValidatingFields }" />
                </FrameLayout>

            </android.support.design.widget.CoordinatorLayout>


        </RelativeLayout>

        <FrameLayout
            android:id="@+id/reveal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="?colorAccent"
            android:elevation="25dp"
            android:visibility="invisible">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txt_welcome"
                    style="@style/TextAppearance.OITOO.H1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"
                    android:alpha="0"
                    android:text="@string/welcome"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animation_complete"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:fitsSystemWindows="true"
                    android:importantForAccessibility="no"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_welcome"
                    app:lottie_rawRes="@raw/check_mark_success" />


            </android.support.constraint.ConstraintLayout>
        </FrameLayout>

        <include
            android:translationZ="10dp"
            layout="@layout/arrow_back_button"
            android:id="@+id/arrow_back_button"/>

    </android.support.design.widget.CoordinatorLayout>
</layout>