<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="pt.oitoo.portooculto.viewmodel.ForgotPasswordViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinator_reg_dialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/oitoo_orange">

        <include
            layout="@layout/arrow_back_button"
            android:id="@+id/arrow_back_button"/>

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical" >

            <LinearLayout
                android:id="@+id/reg_container_fields"
                style="@style/Widget.OITOO.Dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="168dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tl_auth_user"
                    style="@style/TextAppearance.OITOO.TextInputLayout"
                    app:passwordToggleContentDescription="Email"
                    android:layout_marginBottom="@dimen/margin_large">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_forgot_email"
                        style="@style/TextAppearance.OITOO.TextInputEditText"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:text="@={viewModel.email}"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <ImageView
                android:translationZ="25dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_lock"
                app:layout_anchor="@+id/reg_container_fields"
                app:layout_anchorGravity="top|center" />

            <FrameLayout
                android:id="@+id/frame_signin"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_below="@+id/reg_container_fields"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/gradient_horizontal_background"
                android:elevation="30dp"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                android:onClick="@{ () -> viewModel.forgotPassword(viewModel.email) }"
                app:layout_anchor="@+id/reg_container_fields"
                app:layout_anchorGravity="bottom|center">

                <TextView
                    android:id="@+id/txt_send_email"
                    style="@style/Widget.OITOO.RaisedTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/send" />

                <ProgressBar
                    android:id="@+id/progress_bar_send"
                    style="@style/Widget.OITOO.ProgressbarWhite"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:translationZ="10dp"
                    android:visibility="invisible"
                     />
            </FrameLayout>

        </android.support.design.widget.CoordinatorLayout>

        <FrameLayout
            android:id="@+id/reveal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="?colorAccent"
            android:elevation="25dp"
            android:visibility="invisible">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txt_welcome"
                    style="@style/TextAppearance.OITOO.H1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"
                    android:alpha="0"
                    android:text="@string/welcome"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animation_complete"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:fitsSystemWindows="true"
                    android:importantForAccessibility="no"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_welcome"
                    app:lottie_rawRes="@raw/check_mark_success" />


            </android.support.constraint.ConstraintLayout>
        </FrameLayout>


    </android.support.design.widget.CoordinatorLayout>
</layout>